--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <body>
 
     <header id="header">
+      <nav id="nav-bar">
+        <ul>
+          <li class="nav-link">HOME</li>
+          <li class="nav-link">ABOUT</li>
+          <li class="nav-link">GALLERY</li>
+        </ul>
+      </nav>
        <img id="header-img" src="" alt="company logo">
     </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
