Page body sections and id links

--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
     <header id="header">
       <nav id="nav-bar">
         <ul>
-          <li class="nav-link">HOME</li>
-          <li class="nav-link">ABOUT</li>
-          <li class="nav-link">GALLERY</li>
+          <li class="nav-link"><a href="#home">HOME</a></li>
+          <li class="nav-link"><a href="#about">ABOUT</a></li>
+          <li class="nav-link"><a href="#gallery">GALLERY</a></li>
         </ul>
       </nav>
        <img id="header-img" src="" alt="company logo">
     </header>
+
+    <div id="home">
+        Home section
+    </div>
+    <div id="about">
+        Information section
+    </div>
+    <div id="gallery">
+        GALLERY section
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
