--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-
     <header id="header">
       <nav id="nav-bar">
         <ul>
@@ -16,19 +15,24 @@
           <li class="nav-link"><a href="#gallery">GALLERY</a></li>
         </ul>
       </nav>
-       <img id="header-img" src="" alt="company logo">
+      <img id="header-img" src="" alt="company logo" />
     </header>
 
     <div id="home">
-        Home section
+      Home section
     </div>
     <div id="about">
-        Information section
+      Information section
     </div>
     <div id="gallery">
-        GALLERY section
+      GALLERY section
     </div>
+
+    <video id="video" controls>
+      <source src="https://www.youtube.com/watch?v=cIjJ9Bce3tI" type="video/mp4" />
+    </video>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script  src="js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
