--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
       <source src="https://www.youtube.com/watch?v=cIjJ9Bce3tI" type="video/mp4" />
     </video>
 
+    <form id="form">
+      <input id="email" 
+      type="text" placeholder="Enter your email here" 
+      name="email">
+      <input type="submit" id="submit" value="submit"> 
+    </form>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
   </body>
